[bugfix] make resolve option visible in displayMode src

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -459,6 +459,7 @@ ul#markers {
 	-o-transform:rotate(-45deg);
 	-ms-transform:rotate(-45deg);
 	a {
+		color: yellow;
 		text-decoration: none;
 	}
 }
